--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ main {
   padding: 2em;
   display: grid;
   grid-template-columns: auto 1fr;
-  justify-items: center;
+  gap: 4em;
+  justify-items: start;
 }
 
 .form h2 {
@@ -69,10 +70,40 @@ button:hover {
   color: var(--primary);
 }
 
-.forecast h1 {
+.forecast h1,
+.temperature {
   font-size: 2rem;
 }
 
 .forecast button {
   visibility: hidden;
+}
+
+.loader {
+  visibility: hidden;
+  height: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader.visible {
+  height: 100%;
+  width: 100%;
+  visibility: visible;
+}
+
+.loader.visible span {
+  animation: 1s ease-in-out infinite rotateLoader;
+  transform-origin: center;
+  font-size: 4em;
+}
+
+@keyframes rotateLoader {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
